<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvInflator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/header"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="195dp"
                android:text="@string/subjectAndroid"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/etAndroid"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Points"
                android:inputType="number"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="200dp"
                android:text="@string/subjectiPhone"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/etiPhone"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Points"
                android:inputType="number"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvBB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="185dp"
                android:text="@string/subjectWindows"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/etWindows"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Points"
                android:inputType="number"
                android:textColor="#ffffff" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvWindows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="172dp"
                android:text="@string/subjectBB"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/etBB"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Points"
                android:inputType="number"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:src="@drawable/cal" />

</RelativeLayout>