<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="181dp"
                android:text="@string/subjectAndroid"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="189dp"
                android:text="@string/subjectiPhone"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tviPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="169dp"
                android:text="@string/subjectWindows"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvWindows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvInflator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="149dp"
                android:text="@string/subjectBB"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvBB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayoutShowInflator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
